PublicDomainPulp/snippets/home.css
html, body {
  margin: 0px;
  padding: 0px;
}
body {
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #f0ddb6;
  font-family: "Noto Sans", sans-serif;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  font-size: 16px;
  --ed: none;
  --ned: block;
  --edi: none;
  --nedi: inline;
}
.ed {
  display: var(--ed) !important;
}
.ned {
  display: var(--ned) !important; /* okily dokily */
}
.edi {
  display: var(--edi) !important;
}
.nedi {
  display: var(--nedi) !important; /* okily dokily */
}
header {
  width: 100vw;
  overflow: hidden;
}
header > div {
  display: flex;
  justify-content: center;
  height: min(225px, 100vw / 2);
  align-items: flex-end;
  padding-top: 5px;
  overflow-x: hidden;
}
header > div > a {
  height: 100%;
  padding-bottom: 5px;
  box-sizing: border-box;
}
#logo-wrapper {
  height: 100%;
  padding: 5px;
  border: 3px double black;
  box-sizing: border-box;
  background-color: #f8efd4;
}
#logo {
  height: 100%;
  aspect-ratio: 1346 / 637;
  color: transparent;
}
.authors-banner {
  height: 100%;
  width: auto;
  aspect-ratio: 4;
}
#logo-wrapper:hover {
  border: 3px solid black;
}
.bar {
  display: flex;
  justify-content: center;
  background-color: #f8efd4;
  border-top: 3px double black;
  border-bottom: 3px double black;
}
nav {
  gap: 5px 40px;
  font-size: clamp(1em, 6vw, 2em);
  flex-wrap: wrap;
  padding: 5px 10px;
}
nav a {
  font-family: "Liberation Serif", serif;
  text-decoration: none;
  color: black !important;
  font-size-adjust: 0.54;
}
nav a:hover {
  text-decoration: underline;
}
hr {
  border: 0;
  border-top: 1px solid black !important;
}
.center {
  text-align: center;
}
.title {
  width: 100%;
  text-align: center;
  margin: 0;
}
@media (orientation: landscape) or (min-width: 1000px) {
  .nop {
    display: block;
  }
  .op {
    display: none;
  }
}
@media (orientation: portrait) and (max-width: 999px) {
  .nop {
    display: none;
  }
  .op {
    display: block;
  }
}
@media (orientation: landscape) and (min-width: 1000px) {
  .nopp {
    display: block;
  }
  .opp {
    display: none;
  }
}
@media (orientation: portrait) or (max-width: 999px) {
  .nopp {
    display: none;
  }
  .opp {
    display: block;
  }
}
@media (width <= 800px) {
  .ssvisible {
    display: none !important;
  }
}
@media (width <= 1234px) {
  .smargin {
    width: 100% !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
  .svisible {
    display: none !important;
  }
  #content {
    width: 98% !important;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}
.right {
  margin-left: auto;
}
#footer {
  margin-bottom: 1em;
  margin-top: 20px;
  padding: 12px 10px;
  text-align: center;
  gap: 8px 0;
  flex-direction: column;
}
#footer p {
  margin: 0;
}
#content {
  width: 90vw;
  margin: 0 5vw;
  flex-grow: 1;
  overflow-x: auto;
}
.posttitle {
  text-align: center;
  margin-bottom: 40px;
  font-size: 1.25em;
}
.blogwrapper {
  display: flex;
  gap: 5px;
}
.blogwrapper > div {
  flex-grow: 1;
}
#b-left, #b-right {
  background-size: 100%, 36%;
  background-repeat: space, space;
}
#blog {
  max-width: min(45em, 100%);
  margin: 0 auto 20px;
  font-size: 1.1em;
  line-height: 1.6;
  overflow-x: hidden;
}
#blog h2 {
  margin-top: 35px;
  margin-bottom: 15px;
}
#blog img {
  max-width: 100%;
  max-height: 50vh;
  margin: 0 auto;
  display: block;
}
.imghead {
  margin-top: 10px !important;
}
#blog blockquote {
  white-space: pre-wrap;
  border-left: 4px solid #a08a6d;
  padding-left: 15px;
  margin: 15px 0 15px 25px;
}
#blog h4 {
  margin-top: 50px;
}
#bloghead {
  margin-bottom: 0;
}
#blogsubhead {
  margin-top: 0;
}
code, pre {
  font-size: 0.9em;
  border-radius: 6px;
  padding: .2em .4em;
  background-color: #f8eed3;
  white-space: pre-wrap;
}
#catalog-title {
  margin: 0.3em 0 0.5em;
  font-size: clamp(1.2em, 6vw, 2em);
}
#catalog-search {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: 0.5em;
  font-size: clamp(16px, 4vw, 20px);
  align-items: center;
  gap: 0.25em;
  padding: 0 10px;
  box-sizing: border-box;
}
#catalog-search input {
  font-size: clamp(16px, 4vw, 20px);
  height: 2em;
  padding: 5px;
  flex-grow: 1;
  flex-shrink: 1;
  width: 20px;
  max-width: 400px;
}
#catalog-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0 50px;
  align-items: last baseline;
}
.pulpcard {
  width: 100%;
  max-width: 500px;
  overflow: hidden;
  margin: 1em 0 40px;
  border-bottom: 1px solid black;
}
.hiddencard {
  display: none;
}
@media (min-width: 400px) {
  .pulpcard {
    border: 3px double black !important;
    background: linear-gradient(to top, #f1e0ba, #f8efd4);
  }
  .pulpcard > h3 {
    padding-left: 5px;
    padding-right: 5px;
  }
  .pulpcard > div > div {
    padding-left: 5px;
    padding-right: 5px;
  }
}
.pulpcard > h3 {
  width: 100%;
  text-align: center;
  margin: 0;
  font-size: 1.25em;
  padding-top: 0;
  padding-bottom: 2px;
  box-sizing: border-box;
  text-wrap: pretty;
}
.pulpcard > img {
  width: 100%;
  aspect-ratio: 16 / 9;
}
.pulpcard > div {
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  contain: layout;
}
.pulpcard > div > div {
  width: 100%;
  padding-bottom: max(200px, 60%);
  position: relative;
  box-sizing: border-box;
}
.pulpcard > div > div > h3 {
  text-align: center;
}
h3.reediting {
  border: 3px double black;
  background-color: #fffab2;
  width: fit-content;
  padding: 5px;
  margin-left: auto;
  margin-right: auto;
}
.pulpcard > div > div > img {
  width: 100%;
  position: absolute;
}
.pulpcard p.small {
  font-size: 0.9em;
}
.pulpcard p.blurb {
  line-height: 1.6;
}
.pulpcard p.center {
  text-align: center;
}
.upper {
  font-variant: small-caps;
}
#myblurb {
  font-size: 1.2em;
  padding: 0 5px;
  margin-bottom: 0;
}
a:link {
  color: rgb(0, 0, 200);
}

